# RetainHQ

./: .gitattributes  .gitignore  .mcp.json  CLAUDE.md  README.md  index.html  package-lock.json  package.json  scratch_generate.py  tailwind.config.js
backend/: Dockerfile  backfill_roadmap_slugs.py  pyproject.toml  seed_a2z_content.py  seed_ai_engineering.py  seed_aptitude.py  seed_behavioral.py  seed_blind75.py  seed_core_cs.py  seed_cpp_swe.py  seed_deep_learning.py  seed_devops_cloud.py  seed_dsa.py  seed_git_github.py  seed_java_swe.py  seed_linux_shell.py  seed_lld.py  seed_machine_learning.py  seed_neetcode_150.py  seed_python_backend.py  seed_python_swe.py  seed_python_swe_prereqs.py  seed_sql.py  seed_striver_a2z.py  seed_system_design.py  seed_web_dev.py
backend/alembic/: env.py
backend/alembic/versions/: 73c79267ec74_hardening_constraints_and_indexes.py  a1b2c3d4e5f6_add_fsrs_state.py  a3f1c0d4e7b2_roadmap_slug.py  a4b2e9f1c8d3_activity_node_id.py  a7c3d9e1b240_add_sm2_state.py  b2c3d4e5f6a7_add_roadmap_node_prerequisites.py  b72bc0cf122c_add_key_memory_and_mistake.py  b769ae00d904_add_feedbacks.py  b8d4e2f3c510_add_sm2_tracking_fields.py  c2f5a9b3d701_add_ai_grader_fields_to_reviews.py  c71d8f31ee19_initial_schema.py  c9e5f1a2d370_add_activity_source_type.py  d3a1f7c92e10_expand_tier_check.py  d4e8a1b2c903_add_reminder_log.py  e5b2c8d41f30_node_description_subtopics.py  f1a2b3c4d5e6_add_review_recalled_signal.py  f4a9c2e1b370_add_activity_roadmap_id.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  (+1 more)
(+475 files in other folders)
