[project]
name = "retainhq-backend"
version = "0.1.0"
description = "FastAPI backend for RetainHQ"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "sqlmodel>=0.0.19",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.3.4",
    "pyjwt[crypto]>=2.8.0",
    "groq>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
]
# Frozen "intelligence" features — not part of the launch install.
# Install with: pip install -e ".[experiment]"
experiment = [
    "groq>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
